--- a/front/html/index.html
+++ b/front/html/index.html
@@ -44,8 +44,9 @@
   </main>
 
   <footer class="footer">
-    <a href="./index.html"><img class="logo footer__img" src="../images/compressed/logo.webp" alt="logo" width="300"
-        height="359"></a>
+    <a href="./index.html">
+      <img class="logo footer__img" src="../images/compressed/logo.webp" alt="logo" width="300" height="359">
+    </a>
     <p class="footer__p">10 quai de la charente<br>75019 Paris 19</p>
     <p class="footer__p">Téléphone : 01 23 45 67 89</p>
     <p class="footer__p">Email : support@name.com</p>
