--- a/front/html/product.html
+++ b/front/html/product.html
@@ -56,7 +56,7 @@
 
         <div class="item__content-quantity border">
           <label for="itemQuantity">Nombre d'article(s) (1-100) :</label>
-          <input type="number" name="itemQuantity" min="1" max="100" value="0" id="quantity">
+          <input type="number" name="itemQuantity" min="1" max="100" value="0" id="itemQuantity">
         </div>
 
         <button class="btn" id="addToCart">Ajouter au panier</button>
