Add api.js & add func change, total, show

--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -9,6 +9,7 @@
   <title>Kanap</title>
   <script src="https://kit.fontawesome.com/288135bec0.js" crossorigin="anonymous" defer></script>
   <link href="../css/style.css" rel="stylesheet">
+  <script src="../js/cart.js" type="module"></script>
 </head>
 
 <body>
@@ -40,7 +41,7 @@
         <h2 class="cart-item__heading">Kanap</h2>
         <p class="cart-item__color">Blue</p>
         <p class="cart-item__price">450<span> €</span></p>
-        <div class="cart__item__content__settings__quantity">
+        <div class="cart-item__quantity">
           <span>Qté : </span>
           <input type="number" class="itemQuantity" name="itemQuantity" min="1" max="100" value="42">
         </div>
@@ -93,7 +94,6 @@
     <p class="footer__p">Email : support@name.com</p>
   </footer>
   <p class="copyright">© Copyright 2021 - 2042 | Openclassrooms by Openclassrooms | All Rights Reserved | Powered by</p>
-  <script src="../js/cart.js" type="module"></script>
 </body>
 
 </html>
